force-app/main/default/objects/Docgen_Template__c/Docgen_Template__c.object-meta.xml
<CustomObject>
    <label>Docgen Template</label>
    <pluralLabel>Docgen Templates</pluralLabel>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Configuration for document generation templates. Each template references a DOCX file in Salesforce Files and defines how data is fetched and merged.</description>
</CustomObject>