force-app/main/default/objects/Docgen_Template__c/fields/ClassName__c.field-meta.xml
<CustomField>
    <fullName>ClassName__c</fullName>
    <description>Fully qualified Apex class name for custom data provider. Must implement DocgenDataProvider interface. Only used when DataSource__c is Custom.</description>
    <label>Custom Provider Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>