force-app/main/default/objects/Docgen_Template__c/fields/DataSource__c.field-meta.xml
<CustomField>
    <fullName>DataSource__c</fullName>
    <description>Determines how template data is fetched. SOQL uses the default provider with SOQL__c query; Custom uses the class specified in ClassName__c.</description>
    <label>Data Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SOQL</fullName>
                <default>true</default>
                <label>SOQL</label>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>