force-app/main/default/objects/Docgen_Template__c/fields/Locale_Field__c.field-meta.xml
<CustomField>
    <fullName>Locale_Field__c</fullName>
    <description>Dot-delimited path in returned SOQL/provider data containing the document locale. Include the source field in SOQL. Blank or unresolved values default to en-US. Composite paths use the section namespace.</description>
    <inlineHelpText>Data field path, not a locale literal. Example: Quote_Offer_Locale__c on a template or Quote.Quote_Offer_Locale__c on a composite. Defaults to en-US.</inlineHelpText>
    <label>Locale Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>