force-app/main/default/objects/Docgen_Template__c/fields/Output_File_Name_Field__c.field-meta.xml
<CustomField>
    <fullName>Output_File_Name_Field__c</fullName>
    <description>Dot-delimited path in generated envelope data to use as the output file name. If blank or unresolved, Docgen uses the default timestamp file name.</description>
    <label>Output File Name Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>