force-app/main/default/objects/Docgen_Template__c/fields/PrimaryParent__c.field-meta.xml
<CustomField>
    <fullName>PrimaryParent__c</fullName>
    <description>Default parent object for ContentDocumentLink creation. Used when template is designed for a specific object type. Admins can enter any Salesforce object API name that is configured in Supported_Object__mdt.</description>
    <label>Primary Parent Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>