force-app/main/default/objects/Docgen_Template__c/fields/ReturnDocxToBrowser__c.field-meta.xml
<CustomField>
    <fullName>ReturnDocxToBrowser__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Legacy flag: interactive generation always returns ContentVersion download URL. Kept for backward compatibility and future extension.</description>
    <label>Return DOCX to Browser</label>
    <type>Checkbox</type>
</CustomField>