force-app/main/default/objects/Docgen_Template__c/fields/ReturnMultipleRecords__c.field-meta.xml
<CustomField>
    <fullName>ReturnMultipleRecords__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When enabled, the SOQL provider returns ALL query results in a records array instead of just the first record. Templates must use {{FOR x IN records}} syntax to iterate over results. Recommended for composite documents to ensure consistent data structure regardless of query cardinality.</description>
    <label>Return Multiple Records</label>
    <type>Checkbox</type>
</CustomField>