force-app/main/default/objects/Docgen_Template__c/fields/SOQL__c.field-meta.xml
<CustomField>
    <fullName>SOQL__c</fullName>
    <description>SOQL query used by the default StandardSOQLProvider to fetch data. Must bind :recordId variable. Example: SELECT Id, Name FROM Account WHERE Id = :recordId</description>
    <label>SOQL Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>