force-app/main/default/objects/Docgen_Template__c/fields/TemplateContentVersionId__c.field-meta.xml
<CustomField>
    <fullName>TemplateContentVersionId__c</fullName>
    <description>ContentVersionId of the template file stored in Salesforce Files. Guided creation uses TBD until an admin uploads the source file from the record page.</description>
    <label>Template ContentVersion ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>