force-app/main/default/objects/Docgen_Template__c/fields/Watermark_Condition_Field__c.field-meta.xml
<CustomField>
    <fullName>Watermark_Condition_Field__c</fullName>
    <description>Optional data field path that controls whether Watermark Text is applied. Blank means watermark text is always applied.</description>
    <label>Watermark Condition Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>