force-app/main/default/objects/Docgen_Template__c/fields/Watermark_Style__c.field-meta.xml
<CustomField>
    <fullName>Watermark_Style__c</fullName>
    <defaultValue>&quot;Font: Courier&quot; &amp; BR() &amp; &quot;Width: 350&quot; &amp; BR() &amp; &quot;Height: 50&quot; &amp; BR() &amp; &quot;Rotation: -45&quot; &amp; BR() &amp; &quot;Color code: #808080&quot;</defaultValue>
    <description>Optional key/value style settings for generated watermarks. Supported keys: Font, Width, Height, Rotation, Color code.</description>
    <label>Watermark Style</label>
    <type>TextArea</type>
</CustomField>