force-app/main/default/objects/Docgen_Template__c/fields/Watermark_Text__c.field-meta.xml
<CustomField>
    <fullName>Watermark_Text__c</fullName>
    <description>Static watermark text to add when the optional watermark condition field evaluates true.</description>
    <label>Watermark Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>