force-app/main/default/objects/Docgen_Template__c/listViews/All_Templates.listView-meta.xml
<ListView>
    <fullName>All_Templates</fullName>
    <label>All Templates</label>
    <filterScope>Everything</filterScope>
    <columns>NAME</columns>
    <columns>PrimaryParent__c</columns>
    <columns>DataSource__c</columns>
    <columns>ClassName__c</columns>
    <columns>TemplateContentVersionId__c</columns>
    <columns>ReturnDocxToBrowser__c</columns>
    <columns>StoreMergedDocx__c</columns>
    <columns>CREATED_DATE</columns>
</ListView>